修改个人简历

--- a/个人简历.rst
+++ b/个人简历.rst
@@ -16,19 +16,16 @@
 --------------------------------------------------
 
 
-从进入大学以来，我一直在开源的世界上一路走来，其中使用过很过linux的发行版，包括ubuntu、forda、centos等。在这个过程中我的计算机视野也开阔了不少，在使用linux的过程中，不知不觉中我就对python建立了很浓厚的兴趣，对python的语法、标准库、第三方库都有一定的使用经验。
+从进入大学以来，我一直在开源的世界上一路走来，其中使用过很过linux的发行版，包括ubuntu、Fedora、centos等。目前使用ubuntu作为我的主要的操作系统。在这个过程中我的计算机视野也开阔了不少，在使用linux的过程中，不知不觉中我就对python建立了很浓厚的兴趣，对python的语法、标准库、第三方库都有一定的使用经验。
 
-有一定的语法基础、能理解和使用常用的算法和数据结构。
+自我评价
 
-熟悉使用git、hg等代码管理工具进行协作编程。
-
-熟悉使用django构建网站
-
-熟悉使用scrapy抓取b2c类别网站信息
-
-能够使用twisted构建异步通信的server端或client端应用程序
-
-对数据挖掘方面有浓厚的兴趣，并希望未来向这个方向发展
+    - 有一定的语法基础、能理解和使用常用的算法和数据结构。
+    - 熟悉使用git、hg等代码管理工具进行协作编程。
+    - 熟悉使用django构建网站
+    - 熟悉使用scrapy抓取b2c类别网站信息
+    - 能够使用twisted构建异步通信的server端或client端应用程序
+    - 对数据挖掘方面有浓厚的兴趣，并希望未来向这个方向发展
 
 
 --------------------------------------------------
