--- a/个人简历.rst
+++ b/个人简历.rst
@@ -18,7 +18,7 @@
 
 从进入大学以来，我一直在开源的世界上一路走来，其中使用过很过linux的发行版，包括ubuntu、Fedora、centos等。目前使用ubuntu作为我的主要的操作系统。在这个过程中我的计算机视野也开阔了不少，在使用linux的过程中，不知不觉中我就对python建立了很浓厚的兴趣，对python的语法、标准库、第三方库都有一定的使用经验。
 
-自我评价
+**自我评价**
 
     - 有一定的语法基础、能理解和使用常用的算法和数据结构。
     - 熟悉使用git、hg等代码管理工具进行协作编程。
@@ -62,8 +62,6 @@
   所以我希望在你们公司实习的过程中了解到、学习到python在硬件方面的威力
 
 - 在华工一个学校的环境中，能够在工作之余有时间做一些体育锻炼，这样对于自己的健康会有更好的帮助
-
-- 
                            
 --------------------------------------------------
 其他
