--- a/个人简历.rst
+++ b/个人简历.rst
@@ -66,9 +66,9 @@
 --------------------------------------------------
 其他
 --------------------------------------------------
+- 这个简历的在线版本: 简历_
 
 - 我的github主页： audoe_
 
 .. _audoe: https://github.com/audoe
-
-
+.. _简历: http://audoe.github.com/about_my_self.html
