--- a/_posts/2012-09-05-个人简历.md
+++ b/_posts/2012-09-05-个人简历.md
@@ -7,6 +7,18 @@ title: 陈伟洪的个人简历
 
 这只是个练习而已，我的目标是做一本书
 
+
+
+| Left align | Right align | Center align |
+|:-----------|------------:|:------------:|
+| This       |        This |     This     |
+| column     |      column |    column    |
+| will       |        will |     will     |
+| be         |          be |      be      |
+| left       |       right |    center    |
+| aligned    |     aligned |   aligned    |
+
+
 ###个人介绍
 
 从进入大学以来，我一直在开源的世界上一路走来，其中使用过很过linux的发行版，包括ubuntu、Fedora、centos等。目前使用ubuntu作为我的主要的操作系统。在这个过程中我的计算机视野也开阔了不少，在使用linux的过程中，不知不觉中我就对python建立了很浓厚的兴趣，对python的语法、标准库、第三方库都有一定的使用经验。
