--- a/_posts/2012-09-23-web登录.md
+++ b/_posts/2012-09-23-web登录.md
@@ -4,8 +4,8 @@
 
 我认为不算。因为：
 
-- vpn是通过一个专用的程序监听所有的网络端口，并由他转发到vpn服务器上的，一个浏览器是没有权力去操作一个软件的开关的
-- 浏览器在每一个通讯的过程中都会使用使用COOKIE作为身份的认证
+1. vpn是通过一个专用的程序监听所有的网络端口，并由他转发到vpn服务器上的，一个浏览器是没有权力去操作一个软件的开关的
+2. 浏览器在每一个通讯的过程中都会使用使用COOKIE作为身份的认证
 
 ####表单登录的关键在于：
 
